[gd_scene load_steps=6 format=3 uid="uid://8gedxp22ir4h"]

[ext_resource type="Script" uid="uid://bmftms0cvly4e" path="res://scenes/bootles/ice.gd" id="1_5lpti"]
[ext_resource type="Texture2D" uid="uid://cmtp0wokk86pk" path="res://assets/equipment/ice_machine.png" id="1_ibtnv"]
[ext_resource type="Texture2D" uid="uid://brjhce44nslun" path="res://assets/equipment/ice_cube.png" id="2_risdh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vhfqt"]
size = Vector2(218.19, 227.045)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w5cms"]
size = Vector2(62.95, 63.25)

[node name="IceMachine" type="Node2D"]
script = ExtResource("1_5lpti")

[node name="IceMachineSprite" type="Sprite2D" parent="."]
scale = Vector2(0.626, 0.626)
texture = ExtResource("1_ibtnv")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -2.52)
shape = SubResource("RectangleShape2D_vhfqt")

[node name="IceCube" type="StaticBody2D" parent="."]
visible = false
scale = Vector2(1.44, 1.44)

[node name="IceCubeSprite" type="Sprite2D" parent="IceCube"]
position = Vector2(4.76837e-07, 0)
scale = Vector2(0.385, 0.385)
texture = ExtResource("2_risdh")

[node name="SingleArea2D" type="Area2D" parent="IceCube"]

[node name="SingleCollisionShape2D" type="CollisionShape2D" parent="IceCube/SingleArea2D"]
shape = SubResource("RectangleShape2D_w5cms")

[node name="SingleCollisionShape2D" type="CollisionShape2D" parent="IceCube"]
shape = SubResource("RectangleShape2D_w5cms")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
